[package]
name = "tmp117"
version = "0.1.0"
authors = ["Felipe Balbi <felipe@balbi.sh>"]
repository = "https://github.com/felipebalbi/tmp117"
license = "MIT"
description = "Platform-agnostic Rust driver for the TMP117 temperature sensor."
readme = "README.md"
keywords = ["temperature", "sensor", "i2c", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/felipebalbi/tmp117"
documentation = "https://docs.rs/tmp117"
include = [
	"/**/*.rs",
	"/Cargo.toml",
	"/README.md",
	"/LICENSE",
]
edition = "2021"

[dependencies]
bilge = "0.2.0"
embedded-hal = "1.0.0"

[dev-dependencies]
embedded-hal-mock = "0.10.0"

[profile.release]
lto = true
